# rocky

./: .dockerignore  .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  DESIGN.md  LICENSE  Makefile  README.md  TEAM_BOARD.md  TROUBLESHOOTING.md  package-lock.json  package.json  pyproject.toml
config/: rocky.config.json
core/: .gitignore  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix  knip.json  lefthook.yml  package-lock.json  package.json  rocky.json  tsconfig.base.json  vitest.config.ts
core/.github/: FUNDING.yml
core/docs/: ad-hoc-daemon-testing.md  agent-lifecycle.md  android.md  architecture.md  custom-providers.md  data-model.md  design.md  development.md  floating-panels.md  glossary.md  hover.md  mobile-testing.md  opencode-global-event-baseline.md  product.md  providers.md  release.md  service-proxy.md  testing.md  unistyles.md
core/nix/: desktop-package.nix  module.nix  npm-deps.hash  package.nix
core/patches/: react-native-draggable-flatlist+4.0.3.patch
core/public-docs/: best-practices.md  cli.md  configuration.md  custom-providers.md  index.md  mcp.md  metadata-generation.md  providers.md  schedules.md  security.md  skills.md  supported-providers.md  voice.md  why.md  worktrees.md
core/scripts/: dev-daemon.sh  dev-home.sh  dev.ps1  dev.sh  emit-release-env.mjs  measure-relay-latency.ts  merge-mac-manifest.test.mjs  prove-relay-prod.mjs  push-current-release-tag.mjs  release-version-utils.mjs  release-version-utils.test.mjs  set-release-version.mjs  stamp-rollout.test.mjs  sync-release-notes-from-changelog.mjs  sync-release-notes-from-changelog.test.mjs  sync-workspace-versions.mjs  trace-daemon.mjs
deploy/mcp/: Containerfile  Containerfile.full  requirements-mcp.txt
launchd/: dev.rocky.embedding.plist  dev.rocky.llm.plist
rocky/: __main__.py  integration.py  mcp_app.py  serve.py
rocky/core/: __init__.py  _completion.py  _download_gate.py  _log_namespace.py  _mlx_compat.py  _sampler_fast_path.py  _version_check.py  aliases.json  cloud_router.py  engine_core.py  memory_cache.py  mllm_cache.py  model_aliases.py  model_auto_config.py  model_registry.py  model_runner.py  multimodal_processor.py  optimizations.py  output_router.py  output_router_harmony.py  paged_cache.py  plugin.py  prefix_cache.py  request.py  scheduler.py  server.py  text_model_from_vlm.py  turboquant.py  vision_embedding_cache.py  vllm_platform.py  worker.py
rocky/memory/: __init__.py  engine.py
rocky/search/: __init__.py  config.py  (+10 more)
rust/: Cargo.toml  STATUS.md
rust/crates/rocky-acp/: Cargo.toml
rust/crates/rocky-acp-provider/: Cargo.toml
rust/crates/rocky-acp-provider/src/: lib.rs
rust/crates/rocky-acp-provider/tests/: bridge.rs
rust/crates/rocky-acp/src/: approval.rs  error.rs  lib.rs  process.rs  session.rs  tool_detail.rs  transport.rs
rust/crates/rocky-acp/tests/: live_acp.rs
rust/crates/rocky-agent-domain/: Cargo.toml
rust/crates/rocky-agent-domain/src/: lib.rs
rust/crates/rocky-agents/: Cargo.toml
rust/crates/rocky-agents/src/: clock.rs  error.rs  lib.rs  manager.rs  paths.rs  permissions.rs  provider.rs  timeline.rs
rust/crates/rocky-agents/tests/: agents.rs
rust/crates/rocky-config/: Cargo.toml
rust/crates/rocky-config/src/: daemon_config.rs  home.rs  lib.rs  listen.rs
rust/crates/rocky-mcp/: Cargo.toml
rust/crates/rocky-mcp/src/: agent_lifecycle_tools.rs  context.rs  lib.rs  protocol.rs  schedule_tools.rs  server.rs  terminal_tools.rs  tools.rs  worktree_provider_tools.rs
rust/crates/rocky-mcp/tests/: mcp.rs
rust/crates/rocky-mission-control/: Cargo.toml
rust/crates/rocky-mission-control/src/: board.rs  clock.rs  error.rs  lib.rs  service.rs  types.rs
rust/crates/rocky-mission-control/tests/: service.rs
rust/crates/rocky-notify/: Cargo.toml
rust/crates/rocky-notify/src/: lib.rs  private_file.rs  push.rs  push_store.rs  speech.rs
rust/crates/rocky-proxy/: Cargo.toml
rust/crates/rocky-proxy/src/: hostname.rs  lib.rs  registry.rs
rust/crates/rocky-relay/: Cargo.toml
rust/crates/rocky-relay/src/: channel.rs  crypto.rs  interop_vector.rs  lib.rs  pairing.rs
rust/crates/rocky-scheduling/: Cargo.toml
rust/crates/rocky-scheduling/src/: cron.rs  lib.rs  loop_service.rs  schedule_service.rs  schedule_store.rs  time_util.rs
rust/crates/rocky-store/: Cargo.toml
rust/crates/rocky-store/src/: agents.rs  atomic.rs  chat.rs  keypair.rs  lib.rs  loops.rs  pid_lock.rs  registry.rs  schedules.rs  server_id.rs
rust/crates/rocky-terminal/: Cargo.toml
rust/crates/rocky-terminal/src/: frames.rs  lib.rs  manager.rs
rust/crates/rocky-workspaces/: Cargo.toml
rust/crates/rocky-workspaces/src/: git.rs  lib.rs  registry.rs  worktree.rs
rust/crates/rocky-ws-session/: Cargo.toml
rust/crates/rocky-ws-session/src/: dispatch.rs  envelope.rs  handlers.rs  lib.rs
rust/crates/rocky-ws-session/src/handlers/: agent.rs  chat_schedule_loop.rs  checkout.rs  daemon_read.rs  files.rs  mission.rs  workspace.rs
rust/crates/rocky-ws-session/tests/: agent_live_session.rs  agent_session.rs  chat_schedule_loop_session.rs  checkout_files_session.rs  daemon_read_session.rs  mission_session.rs  workspace_session.rs
rust/crates/rockyd/: Cargo.toml
rust/crates/rockyd/src/: auth.rs  cli.rs  hostnames.rs  http.rs  http_tests.rs  lifecycle.rs  main.rs  server.rs  webui.rs  ws.rs  ws_tests.rs
scripts/: cleanup-stale-launchd.sh  cutover-to-rust.sh  final_goal_gate.py  random_live_surface_check.py  random_search_smoke.py  random_surface_redundancy_check.py  rockyd-rust.sh  rockyd.sh  serve-webui.mjs  setup.sh  smoke.sh  stage_integration_gate.py  stage_llm_gate.py  stage_memory_gate.py  stage_search_gate.py
server/: rockyd.ts
tests/: test_codebase_call_passthrough.py  test_codebase_tools_list.py  test_fastcontext_search_flow.py  test_integration_stage.py  test_llm_runtime_stage.py  test_mcp_server.py  test_memory_stage.py  test_native_search_flow.py  test_profile_engine_stage.py  test_rocky_naming_contract.py  test_search_hint_filter.py  test_search_stage.py  test_skills_service.py
(+143 files in other folders)
