[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocky"
version = "0.1.2"
description = "Skills and codebase MCP backend for agent tooling"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "steve" }]
keywords = ["mcp", "codebase", "skills", "agent-tools", "server"]
license = { file = "LICENSE" }

dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "requests>=2.28.0",
  "mcp>=1.0.0",
  "jsonschema>=4.0.0",
  "psutil>=5.9.0",
]

[project.scripts]
rocky = "rocky.__main__:main"

[project.optional-dependencies]
llm = [
  "mlx>=0.29.0",
  "mlx-lm>=0.31.0",
  "mlx-vlm>=0.6.3",
  "transformers>=5.0.0",
  "tokenizers>=0.19.0",
  "huggingface-hub>=0.23.0",
  "numpy>=1.24.0",
  "tqdm>=4.66.0",
  "tabulate>=0.9.0",
  "websockets>=12.0",
  "openai-harmony>=0.0.8",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "outlines[mlxlm]>=1.0.0",
  "torch>=2.3.0",
  "torchvision>=0.18.0",
  "sse-starlette>=1.6.0",
]

dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rocky*"]
