[package]
name = "rocky-acp-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rocky-agent-domain = { path = "../rocky-agent-domain" }
rocky-agents = { path = "../rocky-agents" }
rocky-acp = { path = "../rocky-acp" }
anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process"] }
