[package]
name = "rocky-acp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rocky-agent-domain = { path = "../rocky-agent-domain" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["io-util"] }
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "macros", "time", "test-util"] }
