[package]
name = "rocky-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rocky-agent-domain = { path = "../rocky-agent-domain" }
rocky-store = { path = "../rocky-store" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
time.workspace = true
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
tempfile.workspace = true
