[package]
name = "rocky-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
