[package]
name = "rocky-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rocky-agent-domain = { path = "../rocky-agent-domain" }
rocky-agents = { path = "../rocky-agents" }
rocky-mission-control = { path = "../rocky-mission-control" }
rocky-scheduling = { path = "../rocky-scheduling" }
rocky-store = { path = "../rocky-store" }
rocky-terminal = { path = "../rocky-terminal" }
rocky-workspaces = { path = "../rocky-workspaces" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = "0.5"
async-trait = "0.1"
