[package]
name = "rocky-mission-control"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rocky-store = { path = "../rocky-store" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
