[package]
name = "rocky-notify"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
regex = "1"
rocky-store = { path = "../rocky-store" }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
