[package]
name = "rocky-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2 = "0.10"
hex = "0.4"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile.workspace = true
