[package]
name = "rocky-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
base64.workspace = true
rand.workspace = true
crypto_box = { version = "0.9", features = ["salsa20", "std"] }

[dev-dependencies]
tempfile.workspace = true
