[package]
name = "rocky-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
libc.workspace = true
rand.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
