[package]
name = "rocky-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
portable-pty = "0.8"

[dev-dependencies]
tempfile.workspace = true
