[package]
name = "rocky-workspaces"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rocky-store = { path = "../rocky-store" }
time.workspace = true
uuid = { version = "1", features = ["v4"] }
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
