[package]
name = "rocky-ws-session"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rocky-agent-domain = { path = "../rocky-agent-domain" }
rocky-agents = { path = "../rocky-agents" }
rocky-mission-control = { path = "../rocky-mission-control" }
rocky-scheduling = { path = "../rocky-scheduling" }
rocky-store = { path = "../rocky-store" }
rocky-workspaces = { path = "../rocky-workspaces" }
rocky-terminal = { path = "../rocky-terminal" }
rocky-notify = { path = "../rocky-notify" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
tokio.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
async-trait = "0.1"
rocky-acp-provider = { path = "../rocky-acp-provider" }
