[package]
name = "rockyd"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "rockyd"
path = "src/main.rs"

[dependencies]
rocky-config = { path = "../rocky-config" }
rocky-store = { path = "../rocky-store" }
rocky-mcp = { path = "../rocky-mcp" }
rocky-agents = { path = "../rocky-agents" }
rocky-agent-domain = { path = "../rocky-agent-domain" }
rocky-mission-control = { path = "../rocky-mission-control" }
rocky-acp-provider = { path = "../rocky-acp-provider" }
rocky-ws-session = { path = "../rocky-ws-session" }
rocky-workspaces = { path = "../rocky-workspaces" }
rocky-terminal = { path = "../rocky-terminal" }
rocky-scheduling = { path = "../rocky-scheduling" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
clap.workspace = true
time.workspace = true
libc.workspace = true
bcrypt.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
